force-app/main/default/objects/VCG_CPQ_Approval_Group_Matrix__c/VCG_CPQ_Approval_Group_Matrix__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Approval Group Matrix</label>
    <nameField>
        <displayFormat>AM-{000}</displayFormat>
        <label>VCG CPQ Approval Group User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCG CPQ Approval Group Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>