force-app/main/default/objects/VCG_CPQ_Approval_Group_Matrix__c/fields/Approval_Condition__c.field-meta.xml
<CustomField>
    <fullName>Approval_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Condition</label>
    <referenceTo>VCG_CPQ_Approval_Condition__c</referenceTo>
    <relationshipLabel>VCG CPQ Approval Group Matrices</relationshipLabel>
    <relationshipName>VCG_CPQ_Approval_Group_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>