force-app/main/default/objects/VCG_CPQ_Approval_Group_Matrix__c/fields/Approval_Group__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Group</label>
    <referenceTo>VCG_CPQ_Approval_Group__c</referenceTo>
    <relationshipLabel>VCG CPQ Approval Group Matrices</relationshipLabel>
    <relationshipName>VCG_CPQ_Approval_Group_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>