force-app/main/default/objects/VCG_CPQ_Approval_Group_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sequence__c</columns>
    <columns>NAME</columns>
    <columns>Approval_Condition__c</columns>
    <columns>Approval_User_Role__c</columns>
    <columns>Approval_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>